--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,6 +233,8 @@
     <string name="current_color">Color actual</string>
     <string name="percentage" translatable="false">(%)</string>
     <string name="night_mode_boolean" translatable="false">NightModeBoolean</string>
+    <string name="playlist">Lista de reproducción:</string>
+    <string name="off_status_speaker" translatable="false">stopped</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
     <!--    <string name="notifications">notifications_key</string>-->
 </resources>
