Speaker Vew terminado

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -190,4 +190,13 @@
     <string name="notificactions_message_device.added">The device was added and is ready to use</string>
     <string name="notificactions_message_device.deleted">The device was removed from the system</string>
     <string name="mop">Mop</string>
+    <string name="playlist">Playlist:</string>
+    <string name="oven_conventional">Conventional</string>
+    <string name="oven_top">Top</string>
+    <string name="oven_bottom">Bottom</string>
+    <string name="country" translatable="false">Country</string>
+    <string name="dance">Dance</string>
+    <string name="latina">Latina</string>
+    <string name="rock">Rock</string>
+    <string name="pop">Pop2</string>
 </resources>
