--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -103,6 +103,9 @@
         <item>cl</item>
         <item>dl</item>
         <item>l</item>
+        <item>dal</item>
+        <item>hl</item>
+        <item>kl</item>
     </string-array>
     <string-array name="genres">
         <item>Pop</item>
