--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,7 +22,7 @@
     <string name="bloquear">Bloquear</string>
     <string name="reproduciendo">Reproduciendo</string>
     <string name="batery_state">Bateria: %1$d</string>
-    <string name="invalid_temp">Valor de temperatura invalido</string>
+    <string name="invalid_temp">Valor de temperatura inválido</string>
     <string name="stopped_error">El parlante esta apagado, para reproducir música debes prenderlo</string>
     <string name="block_error">No puedes bloquear la puerta si esta abierta</string>
     <string name="open_error">No se puede abrir la puerta si esta bloqueada</string>
@@ -44,10 +44,10 @@
     <string name="ubicacion">Ubicación:</string>
     <string name="ac">Imagen de Aire Acondicionado</string>
     <string name="minus_button">Boton menos</string>
-    <string name="plus_button">Boton mas</string>
-    <string name="frio">Frio</string>
+    <string name="plus_button">Boton más</string>
+    <string name="frio">Frío</string>
     <string name="calor">Calor</string>
-    <string name="ventilacion">Ventilacion</string>
+    <string name="ventilacion">Ventilación</string>
     <string name="modo">Modo</string>
     <string name="desplazamiento_aspas">Desplazamiento de aspas</string>
     <string name="vertical">Vertical:</string>
@@ -55,9 +55,9 @@
     <string name="horizontal">Horizontal:</string>
     <string name="velocidad_ventilador">Velocidad del ventilador:</string>
     <string name="speaker">Imagen de parlante</string>
-    <string name="previous">Boton canción anterior</string>
-    <string name="play">Boton de play y pausa</string>
-    <string name="next">Boton canción siguiente</string>
+    <string name="previous">Botón canción anterior</string>
+    <string name="play">Botón de play y pausa</string>
+    <string name="next">Botón canción siguiente</string>
     <string name="genero">Genero:</string>
     <string name="volumen">Volumen</string>
     <string name="oven">Imagen Horno</string>
@@ -69,7 +69,7 @@
     <string name="dispensar">Dispensar</string>
     <string name="cantidad">Cantidad</string>
     <string name="seleccione_hogar">Seleccione Hogar:</string>
-    <string name="habitacion">Habitacion:</string>
+    <string name="habitacion">Habitación:</string>
     <string name="favoritos">Favoritos</string>
     <string name="rutinas">Rutinas</string>
     <string name="hogares">Hogares</string>
@@ -135,16 +135,16 @@
     <string name="dispensedQuantity">Cantidad dispensada</string>
     <string name="color">Color</string>
     <string name="brightness">Brillo</string>
-    <string name="convection">Conveccion</string>
+    <string name="convection">Convección</string>
     <string name="genre">Genero</string>
     <string name="volume">Volumen</string>
     <string name="song">Canción</string>
     <string name="name">Nombre</string>
     <string name="meta.fav">Favorito</string>
-    <string name="room.name">Nombre de la habitacion</string>
+    <string name="room.name">Nombre de la habitación</string>
     <string name="room.home.name">Nombre del hogar</string>
     <string name="spinner_invalid_home_name">El hogar seleccionado fue eliminado, o su nombre fue modificado</string>
-    <string name="invalid_vacuum_location">La habitacion a la cual estaba asignada la aspiradora ah sido borrada. Será asignada a su habitacion.</string>
+    <string name="invalid_vacuum_location">La habitacion a la cual estaba asignada la aspiradora ha sido borrada. Será asignada a su habitacion.</string>
     <string name="classical">Clásica</string>
     <string name="opened">Abierta</string>
     <string name="opening">Abriendose</string>
@@ -155,10 +155,10 @@
     <string name="bottom">Abajo</string>
     <string name="top">Arriba</string>
     <string name="large">Completo</string>
-    <string name="eco">Economico</string>
+    <string name="eco">Económico</string>
     <string name="off">Apagado</string>
     <string name="normal">Normal</string>
-    <string name="cool">Frio</string>
+    <string name="cool">Frío</string>
     <string name="unlocked">Desbloqueada</string>
     <string name="locked">Bloqueada</string>
     <string name="docked">Trapear</string>
@@ -177,14 +177,14 @@
     <string name="extraSettingsText">Ajustes Extra</string>
     <string name="themeText">Tema oscuro</string>
     <string name="ac_heat">Calor</string>
-    <string name="ac_cool">Frio</string>
+    <string name="ac_cool">Frío</string>
     <string name="ac_fan">Ventilador</string>
     <string name="brillo">Brillo</string>
     <string name="routine_description">Tarjeta de rutina</string>
     <string name="current_color">Color actual</string>
     <string name="notificactions_message_fav_true">El dispositivo fue agregado a favoritos</string>
     <string name="notificactions_message_fav_false">El dispositivo fue removido de  favoritos</string>
-    <string name="notificactions_message_room.name">El dispositivo ahora se encuentra registrado en la habitacion %1$s</string>
+    <string name="notificactions_message_room.name">El dispositivo ahora se encuentra registrado en la habitación %1$s</string>
     <string name="notificactions_message_room.home.name">El dispositivo ahora se encuentra registrado en el hogar %1$s</string>
     <string name="notificactions_message_name">El dispositivo cambio de nombre, ahora se llama %1$s</string>
     <string name="notificactions_message_device.added">El dispositivo fue agregado y esta disponible para usar</string>
