--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="blinds_level" translatable="false">%1$d</string>
 
     <string name="invalid_temp">Valor de temperatura invalido</string>
-    <string name="stopped_error">El parlante esta apagado, para reproducir musica debes prenderlo</string>
+    <string name="stopped_error">El parlante esta apagado, para reproducir música debes prenderlo</string>
     <string name="block_error">No puedes bloquear la puerta si esta abierta</string>
     <string name="open_error">No se puede abrir la puerta si esta bloqueada</string>
     <string name="blinds_open_error">La persiana no puede abrirse en este momento</string>
@@ -96,7 +96,7 @@
     <string name="plus_button">Boton mas</string>
     <string name="frio">Frio</string>
     <string name="calor">Calor</string>
-    <string name="ventilacion">Ventilacion</string>
+    <string name="ventilacion">Ventilación</string>
     <string name="modo">Modo</string>
     <string name="desplazamiento_aspas">Desplazamiento de aspas</string>
     <string name="vertical">Vertical:</string>
@@ -115,9 +115,9 @@
     <string name="setentaycinco" translatable="false">75</string>
     <string name="cien" translatable="false">100</string>
     <string name="speaker">Imagen de parlante</string>
-    <string name="previous">Boton cancion anterior</string>
-    <string name="play">Boton de play y pausa</string>
-    <string name="next">Boton cancion siguiente</string>
+    <string name="previous">Botón cancion anterior</string>
+    <string name="play">Botón de play y pausa</string>
+    <string name="next">Botón cancion siguiente</string>
     <string name="genero">Genero:</string>
     <string name="volumen">Volumen</string>
     <string name="oven">Imagen Horno</string>
@@ -170,13 +170,13 @@
     <string name="dispensedQuantity">Cantidad dispensada</string>
     <string name="color">Color</string>
     <string name="brightness">Brillo</string>
-    <string name="convection">Conveccion</string>
+    <string name="convection">Convección</string>
     <string name="genre">Genero</string>
     <string name="volume">Volumen</string>
-    <string name="song">Cancion</string>
+    <string name="song">Canción</string>
     <string name="name">Nombre</string>
     <string name="meta.fav">Favorito</string>
-    <string name="room.name">Nombre de la habitacion</string>
+    <string name="room.name">Nombre de la habitación</string>
     <string name="classical">Clásica</string>
     <string name="country">Country</string>
     <string name="dance">Dance</string>
@@ -195,7 +195,7 @@
     <string name="bottom">Abajo</string>
     <string name="top">Arriba</string>
     <string name="large">Completo</string>
-    <string name="eco">Economico</string>
+    <string name="eco">Económico</string>
     <string name="off">Apagado</string>
     <string name="normal">Normal</string>
     <string name="cool">Frio</string>
@@ -212,7 +212,7 @@
     <string name="dispensando">Dispensado %1$d %2$s</string>
     <string name="faucet_double_amount" translatable="false">%1$g %2$s</string>
     <string name="batery_state">Bateria: %1$d</string>
-    <string name="invalid_vacuum_location">La habitacion a la cual estaba asignada la aspiradora ah sido borrada. Sera asignada a su habitacion.</string>
+    <string name="invalid_vacuum_location">La habitacion a la cual estaba asignada la aspiradora ha sido borrada. Sera asignada a su habitacion.</string>
     <string name="room.home.name">Nombre del hogar</string>
     <string name="abajo">Abajo</string>
     <string name="arriba">Arriba</string>
@@ -226,7 +226,7 @@
     <string name="themeText">Tema oscuro</string>
     <string name="settingsFile">setings</string>
     <string name="ac_heat">Calor</string>
-    <string name="ac_cool">Frio</string>
+    <string name="ac_cool">Frío</string>
     <string name="ac_fan">Ventilador</string>
     <string name="brillo">Brillo</string>
     <string name="routine_description">Tarjeta de rutina</string>
@@ -234,10 +234,10 @@
     <string name="percentage" translatable="false">(%)</string>
     <string name="notificactions_message_fav_true">El dispositivo fue agregado a favoritos</string>
     <string name="notificactions_message_fav_false">El dispositivo fue removido de  favoritos</string>
-    <string name="notificactions_message_room.name">El dispositivo ahora se encuentra registrado en la habitacion %1$s</string>
+    <string name="notificactions_message_room.name">El dispositivo ahora se encuentra registrado en la habitación %1$s</string>
     <string name="notificactions_message_room.home.name">El dispositivo ahora se encuentra registrado en el hogar %1$s</string>
     <string name="notificactions_message_name">El dispositivo cambio de nombre, ahora se llama %1$s</string>
-    <string name="notificactions_message_device.added">El dispositivo fue agregaEl dispositivo fue agregado y esta disponible para usardo a los dispositivos disponibles</string>
+    <string name="notificactions_message_device.added">El dispositivo fue agregado y esta disponible para usar</string>
     <string name="notificactions_message_device.deleted">El dispositivo fue eliminado del sistema</string>
     <string name="night_mode_boolean" translatable="false">NightModeBoolean</string>
     <string name="mop">Trapear</string>
