--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Smartify</string>
-    <string name="error_message">Algo salio mal: %1$s [%2$d]</string>
+    <string name="error_message">Hubo un problema al realizar la operacion. Por favor intenta de nuevo mas tarde.</string>
     <string-array name="fuente_calor">
         <item>Convencional</item>
         <item>Abajo</item>
