--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,6 +250,7 @@
     <string name="oven_top">Arriba</string>
     <string name="oven_bottom">Abajo</string>
     <string name="turn_on_vacuum_error">La aspiradora no puede ser prendida con menos de 5% de bateria.</string>
+    <string name="error_rutina">Hubo un problema ejecutando la rutina. Es posible que alguno de los dispositivos involucrados haya sido eliminado</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
     <!--    <string name="notifications">notifications_key</string>-->
 </resources>
