--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -204,4 +204,6 @@
     <string name="pop">Pop2</string>
     <string name="turn_on_vacuum_error">The vacuum cannot be turned on with less than 5% battery.</string>
     <string name="error_rutina">There was a problem executing the routine. It is possible one of the devices involved was eliminated.</string>
+    <string name="notifications_favorite_channel_name">Favorites</string>
+    <string name="notifications_favorite_channel_description">Messages for favorite devices</string>
 </resources>
