--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -204,4 +204,6 @@
     <string name="pop">Pop</string>
     <string name="turn_on_vacuum_error">La aspiradora no puede ser prendida con menos de 5% de bateria.</string>
     <string name="error_rutina">Hubo un problema ejecutando la rutina. Es posible que alguno de los dispositivos involucrados haya sido eliminado</string>
+    <string name="notifications_favorite_channel_name">Favoritos</string>
+    <string name="notifications_favorite_channel_description">Mensajes para los dispositivios favoritos</string>
 </resources>
